--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   Сайт портфолио
             </div>
             <div class="tagline">
-                  Адаптивные, красивые и кроссбраузерные сайты
+                  
             </div>
             <div class="morewine">
                   <button>Смотреть выполненные проекты</button>
@@ -31,60 +31,72 @@
       </div>
       <div class="site">
             <div id="wrap">
-                  <a href="https://graf-andreev.github.io/english_school/" class="block">
+                  <a target="_blank" href="https://graf-andreev.github.io/english_school/" class="block">
                         <div class="product">
                               <img src="01.JPG" width="650" height="500" alt="">
                               <div class="txt">
                                     <h1>Лэндинг для школы английского Leven Eleven</h1>
-                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <p>Жирафы, адаптив, flexbox и анимации</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
                   </a>
-                  <a href="https://graf-andreev.github.io/colibri/" class="block">
+                  <a target="_blank" href="https://graf-andreev.github.io/colibri/" class="block">
                         <div class="product">
                               <img src="02.JPG" width="650" height="500" alt="">
                               <div class="txt">
                                     <h1>Лэндинг для таможенной компании Colibri</h1>
-                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <p>Скошенные углы, много форм и JQ плагины</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
                   </a>
-                  <a href="https://graf-andreev.github.io/it_sint/" class="block">
+                  <a target="_blank" href="https://graf-andreev.github.io/it_sint/" class="block">
                         <div class="product">
                               <img src="03.JPG" alt="">
                               <div class="txt">
                                     <h1>Страница для сайта компании It-sintez</h1>
-                                    <p>Много кастомных форм</p>
+                                    <p>Много кастомных форм, ничего необычного</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
                   </a>
-                  <a href="https://graf-andreev.github.io/chisto5/" class="block">
+                  <a target="_blank" href="https://graf-andreev.github.io/chisto5/" class="block">
                         <div class="product">
                               <img src="04.JPG" alt="">
                               <div class="txt">
-                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
-                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <h1>Лэндинг для клининговой компании Chiso5</h1>
+                                    <p>Интересный дизайн, сочетание цветов и 11 шрифтов от дизайнера</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
                               </div>
                         </div>
                   </a>
-                  <a href="https://graf-andreev.github.io/shapki/" class="block">
+                  <a target="_blank" href="https://graf-andreev.github.io/shapki/" class="block">
                         <div class="product">
                               <img src="05.JPG" alt="">
                               <div class="txt">
-                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
-                                    <p>Жирафы, адатив, flexbox и анимации</p>
+                                    <h1>Главная страница для интернет магазина ШАПКИ.НСК</h1>
+                                    <p>Чего только нет: галлереи, табы, формы</p>
+                                    <div class="add">
+                                          <button>Смотреть на GitHub</button>
+                                    </div>
+                              </div>
+                        </div>
+                  </a>
+                  <a target="_blank" href="https://graf-andreev.github.io/apex-landing/" class="block">
+                        <div class="product">
+                              <img src="06.JPG" alt="">
+                              <div class="txt">
+                                    <h1>Главная страница для сайта LegionFarm.com</h1>
+                                    <p>Кастомный селект, галерея и FontAwesome</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
                                     </div>
@@ -189,6 +201,21 @@
       $(document).on("click", ".close-btn a", function() {
             t1.reversed(!t1.reversed());
       });
+
+      $(document).ready(function(){
+      var mouseX, mouseY;
+      var ww = $( window ).width();
+      var wh = $( window ).height();
+      var traX, traY;
+      $(document).mousemove(function(e){
+      mouseX = e.pageX;
+      mouseY = e.pageY;
+      traX = ((4 * mouseX) / 570) + 40;
+      traY = ((4 * mouseY) / 570) + 50;
+      console.log(traX);
+      $(".title").css({"background-position": traX + "%" + traY + "%"});
+  });
+});
 
       </script>
 </body>
