--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <div class="product">
                               <img src="04.JPG" alt="">
                               <div class="txt">
-                                    <h1>Лэндинг для клининговой компании Chiso5</h1>
+                                    <h1>Лэндинг для клининговой компании Chisto5</h1>
                                     <p>Интересный дизайн, сочетание цветов и 11 шрифтов от дизайнера</p>
                                     <div class="add">
                                           <button>Смотреть на GitHub</button>
