--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script src="manifest.json"></script>
-    <script src="pwabuilder-sw.js"></script>
+    <script src="sw.js"></script>
 </head>
 
 <body>
