--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -23,7 +23,7 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <link rel="manifest" href="/manifest.json">
+    <link rel='manifest' href='manifest.json'>
     <script src="sw.js"></script>
 </head>
 
