--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -715,7 +715,7 @@ $("#status").select2({
 
 </html>
 
-<script>
+<script type="module">
     import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
 
     const el = document.createElement('pwa-update');
