--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <link rel='manifest' href='manifest.json'>
+    <script src="pwabuilder-sw-register.js"></script>
     <script src="pwabuilder-sw.js"></script>
 </head>
 
@@ -714,10 +715,3 @@ $("#status").select2({
 </script>
 
 </html>
-
-<script type="module">
-    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
-
-    const el = document.createElement('pwa-update');
-    document.body.appendChild(el);
-</script>
