--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -27,7 +27,17 @@
     <script src="pwabuilder-sw-register.js"></script>
     <script src="pwabuilder-sw.js"></script>
 </head>
-
+<script>
+    if (navigator.serviceWorker.controller) {
+  console.log('[PWA Builder] active service worker found, no need to register')
+} else {
+  navigator.serviceWorker.register('pwabuilder-sw.js', {
+    scope: './'
+  }).then(function(reg) {
+    console.log('Service worker has been registered for scope:'+ reg.scope);
+  });
+}
+</script>
 <body>
     <div id="js-main-menu" class="main-menu">
         <div class="key-indicator">Press "ESC" to close menu.</div>
