--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -381,7 +381,7 @@
         </div>
         <!-- payment layout -->
     </section>
-    <section class="player-online wrapper-content">
+    <section class="player-online wrapper-content" style="display: none;">
         <p class="text-center">PROs at platform currently online</p>
         <div class="top-player player-top1 owl-carousel owl-theme">
             <div class="playler-slider-item">
