--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -5,6 +5,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="msapplication-navbutton-color" content="#ffffff">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
     <title>PwP</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400,600&amp;display=swap"
         rel="stylesheet">
@@ -423,7 +426,7 @@
         </div>
     </section>
     <a href="#">
-        <section class="banner">
+        <section class="banner" style="display: none;">
             <div class="wrapper-content flex align-center">
                 <div><img width="259" src="img/fs-i-04 1.png" alt=""></div>
                 <div class="banner-text text-center">Checkout <br>
