--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -4,14 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="msapplication-starturl" content="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#ffffff">
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="LFCarry" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+    <meta name="theme-color" content="#F6F6F6" />
+    <meta name="application-name" content="LFCarry" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="manifest" href="/manifest.json">
+
+    <meta name="msapplication-config" content="browserconfig.xml" />
+
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/files/manifest/ms-icon-144x144.png" />
+    <meta name="msapplication-navbutton-color" content="#ff7300" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="search-log-referrer">    
+
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
     <title>PwP</title>
+
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Open+Sans:400,600&amp;display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/solid.css"
@@ -27,6 +43,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/style-mob.css" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="Images/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="Images/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="Images/apple-icon-72x72.png">
@@ -40,7 +57,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
+
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
