--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -64,20 +64,22 @@
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <link rel='manifest' href='manifest.json'>
-    <script src="pwabuilder-sw-register.js"></script>
-    <script src="pwabuilder-sw.js"></script>
+    <script src="sw.js"></script>
+    <script src="sw-toolbox.js"></script>
 </head>
 <script>
-    if (navigator.serviceWorker.controller) {
-        console.log('[PWA Builder] active service worker found, no need to register')
-    } else {
-        navigator.serviceWorker.register('pwabuilder-sw.js', {
-            scope: './'
-        }).then(function (reg) {
-            console.log('Service worker has been registered for scope:' + reg.scope);
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function() {
+        navigator.serviceWorker.register('/sw.js').then(function(registration) {
+          // Registration was successful
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, function(err) {
+          // registration failed :(
+          console.log('ServiceWorker registration failed: ', err);
         });
+      });
     }
-</script>
+    </script>
 
 <body>
     <div id="js-main-menu" class="main-menu">
