--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -18,8 +18,8 @@
 
     <meta name="msapplication-config" content="browserconfig.xml" />
 
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/files/manifest/ms-icon-144x144.png" />
+    <meta name="msapplication-TileColor" content="#E6E6FA">
+    <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="msapplication-navbutton-color" content="#ff7300" />
     <meta name="msapplication-starturl" content="/" />
     <meta name="search-log-referrer">    
@@ -44,26 +44,25 @@
     <link rel="stylesheet" type="text/css" href="css/style-mob.css" />
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="Images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="Images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="Images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="Images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="Images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="Images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="Images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="Images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="Images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="Images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
 
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <link rel='manifest' href='manifest.json'>
     <script src="sw.js"></script>
     <script src="sw-toolbox.js"></script>
 </head>
