--- a/index.html
+++ b/index.html
@@ -1,225 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Frontend</title>
-  <meta charset="UTF-8">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css">
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
-  <link rel="stylesheet" href="master.css">
-  <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
-  <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width initial-scale=1">
+
+<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#E6E6FA">
+<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+<meta name="theme-color" content="#E6E6FA">
+
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/sw.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+</script>
+
+  <title>Web Community Leads</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="style/style.css">
+  <script src="https://use.fontawesome.com/4ca20d00e4.js"></script>
 </head>
 <body>
-      <div class="container">
-            <div class="outline"></div>
-            <div class="menu">
-                  <a class="vk" target="_blank" href="https://vk.com/graf_andreev"></a>
-                  <a class="inst" target="_blank" href="https://www.instagram.com/graf_andreev/"></a>
-                  <a class="github" target="_blank" href="https://github.com/graf-andreev"></a>
-            </div>
-            <div class="title">
-                  Сайт портфолио
-            </div>
-            <div class="tagline">
-                  
-            </div>
-            <div class="morewine">
-                  <button>Смотреть выполненные проекты</button>
-            </div>
-      </div>
-      <div class="site">
-            <div id="wrap">
-                  <a target="_blank" href="https://graf-andreev.github.io/english_school/" class="block">
-                        <div class="product">
-                              <img src="01.JPG" width="650" height="500" alt="">
-                              <div class="txt">
-                                    <h1>Лэндинг для школы английского Leven Eleven</h1>
-                                    <p>Жирафы, адаптив, flexbox и анимации</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-                  <a target="_blank" href="https://graf-andreev.github.io/colibri/" class="block">
-                        <div class="product">
-                              <img src="02.JPG" width="650" height="500" alt="">
-                              <div class="txt">
-                                    <h1>Лэндинг для таможенной компании Colibri</h1>
-                                    <p>Скошенные углы, много форм и JQ плагины</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-                  <a target="_blank" href="https://graf-andreev.github.io/it_sint/" class="block">
-                        <div class="product">
-                              <img src="03.JPG" alt="">
-                              <div class="txt">
-                                    <h1>Страница для сайта компании It-sintez</h1>
-                                    <p>Много кастомных форм, ничего необычного</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-                  <a target="_blank" href="https://graf-andreev.github.io/chisto5/" class="block">
-                        <div class="product">
-                              <img src="04.JPG" alt="">
-                              <div class="txt">
-                                    <h1>Лэндинг для клининговой компании Chisto5</h1>
-                                    <p>Интересный дизайн, сочетание цветов и 11 шрифтов от дизайнера</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-                  <a target="_blank" href="https://graf-andreev.github.io/shapki/" class="block">
-                        <div class="product">
-                              <img src="05.JPG" alt="">
-                              <div class="txt">
-                                    <h1>Главная страница для интернет магазина ШАПКИ.НСК</h1>
-                                    <p>Чего только нет: галлереи, табы, формы</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-                  <a target="_blank" href="https://graf-andreev.github.io/apex-landing/" class="block">
-                        <div class="product">
-                              <img src="06.JPG" alt="">
-                              <div class="txt">
-                                    <h1>Главная страница для сайта LegionFarm.com</h1>
-                                    <p>Кастомный селект, галерея и FontAwesome</p>
-                                    <div class="add">
-                                          <button>Смотреть на GitHub</button>
-                                    </div>
-                              </div>
-                        </div>
-                  </a>
-            </div>
-            <a class="close-btn">close</a>
-      </div>
+  <div class="container">
+    <div class="box">
+      <h1>Web Community Leads UK and IE</h1>
+      <br>
+      <p>Web Community Leads UK and IE is a network of people who run meet up groups or similar events focused around web technologies.
+      <br>It exists to help event organisers to share resources and ask for advice when needed.</p>
 
-      <script>
-
-      $(document).ready(function() {
-            var docWidth = $('body').width(),
-            $wrap = $('#wrap'),
-            $images = $('#wrap .block'),
-            slidesWidth = $wrap.width();
-
-            $(window).on('resize', function() {
-                  docWidth = $('body').width();
-                  slidesWidth = $wrap.width();
-            })
-
-            $(document).mousemove(function(e) {
-                  var mouseX = e.pageX,
-                  offset = mouseX / docWidth * slidesWidth - mouseX / 2;
-
-                  $images.css({
-                        '-webkit-transform' : 'translate3d(' + -offset + 'px,0,0)',
-                        'transform' : 'translate3d(' + -offset + 'px,0,0)'
-                  });
-            });
-      })
-
-      var t1 = new TimelineMax({paused: true});
-
-      TweenMax.from(".logo", 0.5, {
-            opacity: 0,
-            y: 10,
-            delay: 1
-      });
-
-      TweenMax.from(".menu", 0.5, {
-            opacity: 0,
-            y: 10,
-            delay: 1.2
-      });
-
-      TweenMax.from(".title", 3, {
-            opacity: 0,
-            delay: 1.4
-      });
-
-      TweenMax.from(".tagline", 3, {
-            opacity: 0,
-            delay: 1.6
-      });
-
-      TweenMax.from(".morewine", 0.5, {
-            opacity: 0,
-            y: 4,
-            delay: 1.8
-      });
-
-      t1.to(".site", 1, {
-            autoAlpha: 1
-      });
-
-      t1.from(".one", 0.5, {
-            opacity: 0,
-            y: 20,
-            delay: 0.1
-      },"-=1");
-
-      t1.from(".two", 0.5, {
-            opacity: 0,
-            y: 20,
-            delay: 0.3
-      },"-=1");
-
-      t1.from(".three", 0.5, {
-            opacity: 0,
-            y: 20,
-            delay: 0.5
-      },"-=1");
-
-      t1.from(".four", 0.5, {
-            opacity: 0,
-            y: 20,
-            delay: 0.7
-      },"-=1");
-
-      t1.reverse();
-      $(document).on("click", ".morewine", function() {
-            t1.reversed(!t1.reversed());
-      });
-
-      $(document).on("click", "a", function() {
-            t1.reversed(!t1.reversed());
-      });
-
-      $(document).on("click", ".close-btn a", function() {
-            t1.reversed(!t1.reversed());
-      });
-
-      $(document).ready(function(){
-      var mouseX, mouseY;
-      var ww = $( window ).width();
-      var wh = $( window ).height();
-      var traX, traY;
-      $(document).mousemove(function(e){
-      mouseX = e.pageX;
-      mouseY = e.pageY;
-      traX = ((4 * mouseX) / 570) + 40;
-      traY = ((4 * mouseY) / 570) + 50;
-      console.log(traX);
-      $(".title").css({"background-position": traX + "%" + traY + "%"});
-  });
-});
-
-      </script>
+      <h3>How to get involved</h3>
+      <ol>
+        <li>Read though our <a href="https://github.com/webcommunityukie/Code-of-Conduct"><i class="fa fa-bolt"></i> Code of Conduct</a>.</li>
+        <li>Visit our <a href="https://webcommunityukie.slack.com"><i class="fa fa-slack"></i> Slack</a>, if you can track down someone already involved ask them to invite you and if you can't you are still welcome to join, details of how to can be found <a href="https://docs.google.com/document/d/1-9mtynxQfA445qTM_VRSfMJbkMKsoBKLiIFpTCPK_F4/edit?usp=sharing">here.</a></li>
+        <li>Check out all the <a href="https://drive.google.com/drive/u/1/folders/0B1OSazPpPBanODA3RGIxc0xiQ0k"><i class="fa fa-file-o"></i> Information and Resources</a> our community has compiled on running events.</li>
+        <li>Sign up to our <a href="http://eepurl.com/dAaFmv"><i class="fa fa-envelope"></i> newsletter</a> for updates.</li>
+      </ol>
+      <footer>
+        <a href="https://github.com/webcommunityukie/webcommunityukie.github.io">Code on GitHub</a>
+        <a href="http://goldsmiths.tech">Inspired by Hacksmiths</a>
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
