--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="msapplication-starturl" content="/">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="LFCarry" />
@@ -21,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#E6E6FA">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="msapplication-navbutton-color" content="#ff7300" />
-    <meta name="msapplication-starturl" content="/" />
+    <meta name="msapplication-starturl" content="/apex-landing/" />
     <meta name="search-log-referrer">    
 
     <meta name="msapplication-navbutton-color" content="#ffffff">
