--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -339,7 +339,7 @@
                     <p class="popup-subheader">Following PRO will join your party:</p>
                     <div class="filter-item half flex align-center js-item-1">
                         <div class="image-wrapper">
-                            <img id="first_player_img" src="img/diamond.png" alt="">
+                            <img id="first_player_img" src="img/status/diamond.png" alt="">
                         </div>
                         <div class="half-first-containter">
                             <div class="flex align-center">
@@ -360,7 +360,7 @@
                     </div>
                     <div class="filter-item half flex align-center js-item-1">
                         <div class="image-wrapper">
-                            <img id="first_player_img" src="img/diamond.png" alt="">
+                            <img id="first_player_img" src="img/status/diamond.png" alt="">
                         </div>
                         <div class="half-first-containter">
                             <div class="flex align-center">
@@ -419,7 +419,7 @@
         </div>
         <!-- payment layout -->
     </section>
-    <section class="player-online wrapper-content" style="display: none;">
+    <section class="player-online wrapper-content">
         <p class="text-center">PROs at platform currently online</p>
         <div class="top-player player-top1 owl-carousel owl-theme">
             <div class="playler-slider-item">
@@ -461,7 +461,7 @@
         </div>
     </section>
     <a href="#">
-        <section class="banner" style="display: none;">
+        <section class="banner">
             <div class="wrapper-content flex align-center">
                 <div><img width="259" src="img/fs-i-04 1.png" alt=""></div>
                 <div class="banner-text text-center">Checkout <br>
