--- a/apex-landing/index.html
+++ b/apex-landing/index.html
@@ -13,14 +13,14 @@
     <meta name="application-name" content="LFCarry" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
     <meta name="msapplication-config" content="browserconfig.xml" />
 
     <meta name="msapplication-TileColor" content="#E6E6FA">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="msapplication-navbutton-color" content="#ff7300" />
-    <meta name="msapplication-starturl" content="/apex-landing/" />
+    <meta name="msapplication-starturl" content="/" />
     <meta name="search-log-referrer">    
 
     <meta name="msapplication-navbutton-color" content="#ffffff">
@@ -65,7 +65,7 @@
 <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
-        navigator.serviceWorker.register('sw.js').then(function(registration) {
+        navigator.serviceWorker.register('/sw.js').then(function(registration) {
           // Registration was successful
           console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }, function(err) {
