Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#E6E6FA">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="msapplication-navbutton-color" content="#ff7300" />
-    <meta name="msapplication-starturl" content="/apex-landing/" />
+    <meta name="msapplication-starturl" content="/" />
     <meta name="search-log-referrer">    
 
     <meta name="msapplication-navbutton-color" content="#ffffff">
