--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="msapplication-navbutton-color" content="#ff7300" />
     <meta name="msapplication-starturl" content="/" />
-    <meta name="search-log-referrer">    
+    <meta name="search-log-referrer">   
+    <script src="pwabuilder-sw.js"></script>
+    <script src="pwabuiler-sw-register.js"></script> 
 
     <meta name="msapplication-navbutton-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
